# vaughan

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: algorithm_feature_request.yaml  bug_report.yaml  docs_report.yaml  general_feature_request.yaml
.github/workflows/: check.yml  scheduled.yml  test.yml
assets/: citations.bib  doc-header.html
src/: lib.rs  testing.rs  utils.rs
src/distance/: mod.rs
src/error_metrics/: binary_classification.rs  classification.rs  clustering.rs  mod.rs  multiclass_classification.rs  regression.rs
src/information/: entropy.rs  gini.rs  mod.rs
src/testing/: mod.rs
src/utils/: mod.rs  testing.rs
